force-app/main/default/objects/Account_SKU__c/Account_SKU__c.object-meta.xml
<CustomObject>
    <label>Account SKU</label>
    <nameField>
        <label>Account SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account SKUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>