force-app/main/default/objects/Account_SKU__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account SKUs</relationshipLabel>
    <relationshipName>Account_SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>