force-app/main/default/objects/Account_SKU__c/fields/Account_SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_SKU_Code__c</fullName>
    <externalId>true</externalId>
    <label>Account SKU Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>