force-app/main/default/objects/Account_SKU__c/fields/Base_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Base_Gross_Profit__c</fullName>
    <formula>Contract_price_per_unit__c - COGS_per_unit__c</formula>
    <label>Base Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>