force-app/main/default/objects/Account_SKU__c/fields/Baseline_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Hidden__c</fullName>
    <label>Baseline_Hidden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>