force-app/main/default/objects/Account_SKU__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>SKU__r.Brand__c</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>