force-app/main/default/objects/Account_SKU__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>SKU__r.Category__c</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>