force-app/main/default/objects/Account_SKU__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Mass-market</fullName>
            </value>
            <value>
                <fullName>Tescos</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Impluse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>