force-app/main/default/objects/Account_SKU__c/fields/COGS_per_unit__c.field-meta.xml
<CustomField>
    <fullName>COGS_per_unit__c</fullName>
    <formula>SKU__r.COGS_per_unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COGS per unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>