force-app/main/default/objects/Account_SKU__c/fields/Country_ID__c.field-meta.xml
<CustomField>
    <fullName>Country_ID__c</fullName>
    <formula>Text(SKU__r.Country_ID__c)</formula>
    <label>Country ID</label>
    <type>Text</type>
</CustomField>