force-app/main/default/objects/Account_SKU__c/fields/Future_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Future_Contract_Price__c</fullName>
    <formula>HYPERLINK(&apos;/apex/AccountSKUPriceUpdate?id=&apos; &amp; Id , &apos;Future Contract Price&apos;,&apos;_blank&apos;)</formula>
    <label>Future Contract Price</label>
    <type>Text</type>
</CustomField>