force-app/main/default/objects/Account_SKU__c/fields/List_price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>List_price_per_unit__c</fullName>
    <label>List price per unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>