force-app/main/default/objects/Account_SKU__c/fields/LTA_discount__c.field-meta.xml
<CustomField>
    <fullName>LTA_discount__c</fullName>
    <formula>(IF( LTA_Discount_off_list__c &gt;0, LTA_Discount_off_list__c * List_Price__c ,LTA_Discount_off_CP__c * Contract_price_per_unit__c))</formula>
    <label>LTA discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>