force-app/main/default/objects/Account_SKU__c/fields/LTA_Discount_off_list__c.field-meta.xml
<CustomField>
    <fullName>LTA_Discount_off_list__c</fullName>
    <label>% LTA Discount off list</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>