force-app/main/default/objects/Account_SKU__c/fields/My_Account_SKUs__c.field-meta.xml
<CustomField>
    <fullName>My_Account_SKUs__c</fullName>
    <formula>IF( Account__r.KAM__r.Id = $User.Id ,1,0)</formula>
    <label>My Account SKUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>