force-app/main/default/objects/Account_SKU__c/fields/Non_working_spend__c.field-meta.xml
<CustomField>
    <fullName>Non_working_spend__c</fullName>
    <formula>SKU__r.List_Price__c -  Contract_price_per_unit__c</formula>
    <label>Non-working spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>