force-app/main/default/objects/Account_SKU__c/fields/Off_promo_margin__c.field-meta.xml
<CustomField>
    <fullName>Off_promo_margin__c</fullName>
    <formula>Base_Gross_Profit__c /  Contract_price_per_unit__c</formula>
    <label>Off-promo margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>