force-app/main/default/objects/Account_SKU__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <formula>Account__r.ParentId</formula>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>