force-app/main/default/objects/Account_SKU__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <externalId>true</externalId>
    <label>ProductID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>