force-app/main/default/objects/Account_SKU__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <formula>SKU__r.Size_Description__c</formula>
    <label>Size</label>
    <type>Text</type>
</CustomField>