force-app/main/default/objects/Account_SKU__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU</label>
    <referenceTo>SKU__c</referenceTo>
    <relationshipLabel>Account SKUs</relationshipLabel>
    <relationshipName>Account_SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>