force-app/main/default/objects/Account_SKU__c/fields/SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code__c</fullName>
    <formula>SKU__r.SKU_Code__c</formula>
    <label>SKU Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>