force-app/main/default/objects/Account_SKU__c/fields/Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand__c</fullName>
    <formula>SKU__r.Sub_brand__r.Name</formula>
    <label>Sub-Brand</label>
    <type>Text</type>
</CustomField>