force-app/main/default/objects/Account_SKU__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <formula>VALUE( TEXT( SKU__r.Tax_Rate__c ) )</formula>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>